Remove Redis + Upgrade to Gradle 9.4.1, Spring Boot 4.0.5, Jackson 3